--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -32,7 +32,7 @@ buildFuture = false
   priority = 0.5
 
 [outputs]
-  home = ["HTML", "JSON"]
+  home = ["HTML", "JSON", "RSS"]
 
 [related]
   threshold = 0
